--- a/app/src/main/res/drawable/bg_code_button.xml
+++ b/app/src/main/res/drawable/bg_code_button.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true">
-        <color android:color="@color/colorAccent"/>
+        <shape>
+            <corners android:radius="20dp"/>
+            <solid android:color="@color/colorAccent"/>
+        </shape>
     </item>
     <item android:state_enabled="false">
-        <color android:color="@color/unable"/>
+        <shape>
+            <corners android:radius="20dp"/>
+            <solid android:color="@color/unable"/>
+        </shape>
     </item>
 </selector>
