--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,8 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:startIconDrawable="@drawable/ic_perm_identity_black_24dp">
@@ -63,23 +64,18 @@
     
     <Button
         android:id="@+id/button_get_code"
-        style="?attr/materialButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-        android:paddingVertical="16dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:text="获取验证码"
-        android:textColor="#fafafa"
-        android:textSize="18sp"
+        android:textColor="#333333"
+        android:textSize="16sp"
         android:visibility="visible"
         android:enabled="false"
         android:background="@drawable/bg_code_button"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="@+id/linearLayout"
-        app:strokeColor="@color/colorPrimary"
-        app:strokeWidth="2dp" />
+        app:strokeColor="@color/colorPrimary" />
     
     <Button
         android:id="@+id/button_login"
@@ -88,7 +84,7 @@
         android:layout_marginHorizontal="80dp"
         android:text="登 录"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
+        android:textColor="#333333"
         android:textSize="22sp"
         android:layout_marginTop="16dp"
         android:enabled="false"
