--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,6 @@
         app:menu="@menu/bottom_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#CCCCCC"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
